# culebra-hs

./: culebra.cabal  stack.yaml
client/: Main.hs
server/: Main.hs
src/: Client.hs  Game.hs  SerDe.hs  Server.hs
