name:                culebra
version:             0.1.0.0
synopsis:            Multiplayer snake game
description:         Please see README.md
homepage:            https://github.com/nettok/culebra-hs
license:             GPL-3
license-file:        LICENSE
author:              Ernesto Menéndez
maintainer:          pyalec@gmail.com
copyright:           2016 Ernesto Menéndez
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable culebra-server
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , culebra
                     , async == 2.1.0
                     , bytestring == 0.10.8.1
                     , conduit == 1.2.7
                     , conduit-extra == 1.1.13.2
                     , network == 2.6.3.1
                     , resourcet == 1.1.7.5
                     , stm-conduit == 3.0.0

executable culebra-client
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
